Examples/pass/ascription.stella
language core;

fn main(n : Nat) -> Nat {
    return { list =  [] as [Nat], num = 5}.num; 
}
